--- a/src/shared/SignUp/SignUp.css
+++ b/src/shared/SignUp/SignUp.css
@@ -82,3 +82,33 @@
       opacity: 1;
     }
   }
+
+  .box{
+    height: 77px;
+    width: 78px;
+    background: rgb(48, 47, 47);
+    transition: 1s;
+    margin: 1px;
+  }
+  .box:hover{
+    transform: scale(1.0);
+    background: rgb(6, 221, 24);
+    box-shadow: 2px 2px 2px 2px rgb(19, 248, 38) yellow green;
+    z-index: 2;
+  }
+  .bg-container{
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(90deg, #ff6596 #60bef8 #d88cff);
+    background-size: 50% 100%;
+  }
+
+  @keyframes bgAnimationBackground{
+    0%{
+      background-position: 0 0;
+    }
+    100%{
+      background-position: 100% 0;
+    }
+  }
