login and signup animation seet

--- a/src/shared/SignUp/SignUp.css
+++ b/src/shared/SignUp/SignUp.css
@@ -96,20 +96,20 @@
   background: #007cc7;
   box-shadow: 2px 2px #007cc7;
   z-index: 2;
+  transition-duration: 0.1s;
 }
 
 .bg-container {
   height: 100%;
   width: 100%;
-  background: #007cc7;
-  animation: mymove 2s infinite;
+  background: #129ff7;
+  animation: mymove 5s infinite;
 }
 
 @keyframes mymove {
   0%{
-    background-color: #1c4a66;
+    background-color: #129ff7;
   }
-
   100%{
     background-color: rgb(3, 3, 3);
   }
