--- a/src/pages/Home/Banner/custom.css
+++ b/src/pages/Home/Banner/custom.css
@@ -56,7 +56,7 @@
     line-height: 14px;
     letter-spacing: 1.2px;
     transition: .2s .1s;
-    background-image: linear-gradient(90deg,#1c1c1c,#007cc7);
+    background-image: linear-gradient(90deg,#0170b5ae,#007cc7);
     border: 0 solid;
     overflow: hidden;
   }
