--- a/src/shared/SignUp/SignUp.css
+++ b/src/shared/SignUp/SignUp.css
@@ -25,63 +25,6 @@
   cursor: pointer !important;
 }
 
-@keyframes flicker {
-  0% {
-    border: 2px solid rgb(0, 124, 199);
-    box-shadow: 0px 0px 100px rgb(0, 124, 199), inset 0px 0px 10px rgb(0, 124, 199), 0px 0px 5px rgb(255, 255, 255);
-  }
-
-  5% {
-    border: none;
-    box-shadow: none;
-  }
-
-  10% {
-    border: 2px solid rgb(0, 124, 199);
-    box-shadow: 0px 0px 100px rgb(0, 124, 199), inset 0px 0px 10px rgb(0, 124, 199), 0px 0px 5px rgb(255, 255, 255);
-  }
-
-  25% {
-    border: none;
-    box-shadow: none;
-  }
-
-  30% {
-    border: 2px solid rgb(0, 124, 199);
-    box-shadow: 0px 0px 100px rgb(0, 124, 199), inset 0px 0px 10px rgb(0, 124, 199), 0px 0px 5px rgb(255, 255, 255);
-  }
-
-  100% {
-    border: 2px solid rgb(0, 124, 199);
-    box-shadow: 0px 0px 100px rgb(0, 124, 199), inset 0px 0px 10px rgb(0, 124, 199), 0px 0px 5px rgb(255, 255, 255);
-  }
-}
-
-@keyframes iconflicker {
-  0% {
-    opacity: 1;
-  }
-
-  5% {
-    opacity: 0.2;
-  }
-
-  10% {
-    opacity: 1;
-  }
-
-  25% {
-    opacity: 0.2;
-  }
-
-  30% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
 
 .box {
   height: 77px;
@@ -102,15 +45,75 @@
 .bg-container {
   height: 100%;
   width: 100%;
-  background: #129ff7;
-  animation: mymove 5s infinite;
+  /* background: #129ff7; */
+  animation: mymove 15s infinite;
+  transition: 5s;
 }
 
 @keyframes mymove {
-  0%{
-    background-color: #129ff7;
+  0% {
+    background: linear-gradient(#147cbd, black, black, black, black, black, black, black, black, black);
+    transition: 5s;
   }
-  100%{
-    background-color: rgb(3, 3, 3);
+
+  10% {
+    background: linear-gradient(black, #147cbd, black, black, black, black, black, black, black, black);
+    transition: 5s;
+    animation: 2s;
+
+  }
+
+  20% {
+    background: linear-gradient(black, black, #147cbd, black, black, black, black, black, black, black);
+    transition: 5s;
+
+  }
+
+  30% {
+    background: linear-gradient(black, black, black, #147cbd, black, black, black, black, black, black);
+    transition: 5s;
+
+  }
+
+  40% {
+    background: linear-gradient(black, black, black, black, #147cbd, black, black, black, black, black);
+    transition: 5s;
+
+  }
+
+  50% {
+    background: linear-gradient(black, black, black, black, black, #147cbd, black, black, black, black);
+    transition: 5s;
+
+  }
+
+  60% {
+    background: linear-gradient(black, black, black, black, black, black, #147cbd, black, black, black);
+    transition: 5s;
+
+  }
+
+  70% {
+    background: linear-gradient(black, black, black, black, black, black, black, #147cbd, black, black);
+    transition: 5s;
+
+  }
+
+  80% {
+    background: linear-gradient(black, black, black, black, black, black, black, black, #147cbd, black);
+    transition: 5s;
+
+  }
+
+  90% {
+    background: linear-gradient(black, black, black, black, black, black, black, black, black, #147cbd);
+    transition: 5s;
+
+  }
+
+  100% {
+    background: linear-gradient(black, black, black, black, black, black, black, black, black, #147cbd);
+    transition: 5s;
+
   }
 }
