--- a/src/shared/NavBar/styles.css
+++ b/src/shared/NavBar/styles.css
@@ -1,90 +1,161 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  /* Demo only styles */
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  }
-  
-  .demo-content {
-    padding: 20px;
-  }
-  
-  .drawer-container {
-    --transition-speed: 0.4s;
-  }
-  
-  .drawer {
-    background: #fff;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    position: fixed;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-    transition: transform var(--transition-speed) ease;
-    z-index: 1000;
-  }
-  
-  .drawer.left {
-    top: 0;
-    left: 0;
-    transform: translateX(-105%);
-  }
-  
-  .drawer.right {
-    top: 0;
-    right: 0;
-    transform: translateX(100%);
-  }
-  
-  .drawer.top {
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    transform: translateY(-100%);
-    height: 40%;
-  }
-  
-  .drawer.bottom {
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    transform: translateY(100%);
-    height: 40%;
-  }
-  
-  .drawer-container.in.open .left,
-  .drawer-container.in.open .right {
-    transform: translateX(0);
-  }
-  
-  .drawer-container.in.open .top,
-  .drawer-container.in.open .bottom {
-    transform: translateY(0);
-  }
-  
-  .backdrop {
-    visibility: hidden;
-    opacity: 0;
-    background: rgba(0, 0, 0, 0.5);
-    transition: opacity var(--transition-speed) ease,
-      visibility var(--transition-speed) ease;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    pointer-events: none;
-    z-index: 0;
-  }
-  
-  .drawer-container.in.open .backdrop {
-    visibility: visible;
-    opacity: 1;
-    pointer-events: auto;
-    z-index: 999;
-  }
+  box-sizing: border-box;
+}
+
+/* Demo only styles */
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.demo-content {
+  padding: 20px;
+}
+
+.drawer-container {
+  --transition-speed: 0.4s;
+}
+
+.drawer {
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  position: fixed;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  transition: transform var(--transition-speed) ease;
+  z-index: 1000;
+}
+
+.drawer.left {
+  top: 0;
+  left: 0;
+  transform: translateX(-105%);
+}
+
+.drawer.right {
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+}
+
+.drawer.top {
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  transform: translateY(-100%);
+  height: 40%;
+}
+
+.drawer.bottom {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  transform: translateY(100%);
+  height: 40%;
+}
+
+.drawer-container.in.open .left,
+.drawer-container.in.open .right {
+  transform: translateX(0);
+}
+
+.drawer-container.in.open .top,
+.drawer-container.in.open .bottom {
+  transform: translateY(0);
+}
+
+.backdrop {
+  visibility: hidden;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.5);
+  transition: opacity var(--transition-speed) ease,
+    visibility var(--transition-speed) ease;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  pointer-events: none;
+  z-index: 0;
+}
+
+.drawer-container.in.open .backdrop {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+  z-index: 999;
+}
+
+.Btnu {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: 0.3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: #007cc7;
+}
+
+/* plus sign */
+.sign {
+  width: 100%;
+  transition-duration: 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign svg {
+  width: 18px;
+}
+
+.sign svg path {
+  fill: black;
+}
+
+/* text */
+.text {
+  position: absolute;
+  right: 0%;
+  width: 0%;
+  opacity: 0;
+  color: black;
+  font-size: 1.2em;
+  font-weight: 600;
+  transition-duration: 0.3s;
+}
+
+/* hover effect on button width */
+.Btnu:hover {
+  width: 125px;
+  border-radius: 40px;
+  transition-duration: 0.3s;
+}
+
+.Btnu:hover .sign {
+  width: 30%;
+  transition-duration: 0.3s;
+  padding-left: 20px;
+}
+
+/* hover effect button's text */
+.Btnu:hover .text {
+  opacity: 1;
+  width: 70%;
+  transition-duration: 0.3s;
+  padding-right: 10px;
+}
+
+/* button click effect*/
+.Btnu:active {
+  transform: translate(2px, 2px);
+}
