--- a/src/shared/NavBar/styles.css
+++ b/src/shared/NavBar/styles.css
@@ -159,3 +159,45 @@ body {
 .Btnu:active {
   transform: translate(2px, 2px);
 }
+
+.Btnuu {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: 0.3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: #c70000;
+}
+
+/* hover effect on button width */
+.Btnuu:hover {
+  width: 125px;
+  border-radius: 40px;
+  transition-duration: 0.3s;
+}
+
+.Btnuu:hover .sign {
+  width: 30%;
+  transition-duration: 0.3s;
+  padding-left: 20px;
+}
+
+/* hover effect button's text */
+.Btnuu:hover .text {
+  opacity: 1;
+  width: 70%;
+  transition-duration: 0.3s;
+  padding-right: 10px;
+}
+
+/* button click effect*/
+.Btnuu:active {
+  transform: translate(2px, 2px);
+}
