--- a/src/pages/Home/Banner/custom.css
+++ b/src/pages/Home/Banner/custom.css
@@ -15,6 +15,18 @@
   color: #000;
 }
 
+.customInputu {
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #fff;
+  outline: none;
+  transition: border-color 0.3s ease;
+  color: #fff;
+}
+
 .inputLabel {
   position: absolute;
   top: 0;
@@ -26,8 +38,24 @@
   transition: transform 0.3s ease, color 0.3s ease;
 }
 
+.inputLabelu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  padding: 5px;
+  font-size: 16px;
+  color: #fff;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
 .customInput:focus+.inputLabel,
 .customInput:not(:placeholder-shown)+.inputLabel {
+  transform: translateY(-100%) translateX(-5px) scale(0.8);
+}
+
+.customInputu:focus+.inputLabelu,
+.customInputu:not(:placeholder-shown)+.inputLabelu {
   transform: translateY(-100%) translateX(-5px) scale(0.8);
 }
 
@@ -38,6 +66,15 @@
   width: 100%;
   height: 2px;
   background-color: #000;
+}
+
+.inputUnderlie {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
 }
 
 .but {
