--- a/src/pages/Home/Banner/custom.css
+++ b/src/pages/Home/Banner/custom.css
@@ -165,3 +165,11 @@
   background-color: rgba(0, 0, 0, .15);
   box-shadow: 0 1px 1px 0 rgba(255, 255, 255, .75), inset 0 2px 2px rgba(0, 0, 0, .25);
 }
+.svg{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 10px;
+  padding-top: 10px;
+}
