--- a/src/pages/Companies/companies.css
+++ b/src/pages/Companies/companies.css
@@ -4,7 +4,7 @@
     align-items: center;
   }
   
-  .input {
+  .inputy {
     width: 40px;
     height: 40px;
     border-radius: 10px;
@@ -16,15 +16,15 @@
     transition: all .5s ease-in-out;
   }
   
-  .input::placeholder {
+  .inputy::placeholder {
     color: transparent;
   }
   
-  .input:focus::placeholder {
+  .inputy:focus::placeholder {
     color: rgb(131, 128, 128);
   }
   
-  .input:focus,.input:not(:placeholder-shown) {
+  .inputy:focus,.inputy:not(:placeholder-shown) {
     background-color: #fff;
     border: 1px solid rgb(98, 0, 255);
     width: 290px;
@@ -45,12 +45,12 @@
     border: 1px solid rgb(98, 0, 255);
   }
   
-  .input:hover + .iconn {
+  .inputy:hover + .iconn {
     transform: rotate(360deg);
     transition: .2s ease-in-out;
   }
   
-  .input:focus + .iconn,.input:not(:placeholder-shown) + .iconn {
+  .inputy:focus + .iconn,.inputy:not(:placeholder-shown) + .iconn {
     z-index: 0;
     background-color: transparent;
     border: none;
