added chat application

--- a/src/pages/Dashboard/Hr/message.css
+++ b/src/pages/Dashboard/Hr/message.css
@@ -1,48 +1,8 @@
-.messageBox {
-    height: 40px;
-    background-color: #2d2d2d;
-    padding: 0 15px;
-    border-radius: 10px;
-    border: 1px solid rgb(63, 63, 63);
-  }
+.message{
+    display: flex;
+    flex-direction: column;
+}
 
-  .messageBox:focus-within {
-    border: 1px solid rgb(110, 110, 110);
-  }
-  
-  #messageInput {
-    height: 100%;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    padding-left: 10px;
-    color: white;
-  }
-  
-  #messageInput:focus ~ #sendButton svg path,
-  #messageInput:valid ~ #sendButton svg path {
-    fill: #3c3c3c;
-    stroke: white;
-  }
-  
-  #sendButton {
-    height: 100%;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    transition: all 0.3s;
-  }
-  
-  #sendButton svg {
-    height: 18px;
-    transition: all 0.3s;
-  }
-  #sendButton svg path {
-    transition: all 0.3s;
-  }
-  #sendButton:hover svg path {
-    fill: #3c3c3c;
-    stroke: white;
-  }
-  
+.message.own{
+   align-items: flex-end;
+}
